[tool.poetry]
name = "flake8-zale"
version = "0.2.1"
description = "Indentation checker for flake8"
authors = ["Kirill_Lekhov <Kirill.Lekhov@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]
keywords = ["flake8", "plugin"]
homepage = "https://github.com/Kirill-Lekhov/flake8-zale"
repository = "https://github.com/Kirill-Lekhov/flake8-zale"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8.1"
stdlib-list = "0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.plugins."flake8.extension"]
EZL1 = "src.checker:TabIndentationChecker"
EZL2 = "src.checker:MissedCommasChecker"
EZL9 = "src.checker:ImportOrderChecker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
